# Aethersight

./: .gitignore  CMakeLists.txt  README.md
include/Aethersight/: Aethersight.h
include/Aethersight/Network/: CommonNetwork.h
include/Sapphire/Network/: CommonNetwork.h
src/: Aethersight.cpp  Aethersight.h  Decompress.cpp  Decompress.h  main.cpp
